# GalgameCharacterSkills

./: .gitignore  README.md  main.py  package.json  pyproject.toml  requirements.txt
cards/: .gitignore
checkpoints/: .gitignore
docs/: CONTRIBUTING.md  README.md  STRUCTURE.md  architecture.md
docs/application/: README.md  character-card.md  resume-dispatcher.md  shared.md  skills.md  summarize.md
docs/architecture/: dependency-rules.md  overview.md  request-lifecycle.md  runtime-composition.md
docs/decisions/: 0001-layered-architecture.md  0002-checkpoint-based-resume.md  0003-task-api-dispatch.md  0004-move-character-card-flow-to-application.md
docs/domain/: README.md  service-result.md  task-requests.md  task-types.md
docs/files/: README.md  processor.md  summary-discovery.md
docs/llm/: README.md  message-flows.md  prompts.md  provider-config.md  runtime.md  transport.md
docs/reference/: api-contract.md  checkpoint-schema.md  glossary.md
docs/workspace/: README.md  data-layout.md  paths.md
gal_chara_skill/: __init__.py
gal_chara_skill/conf/: __init__.py  checkpoint.py  constants.py  context.py  result.py  runtime.py  settings.py  state.py  task.py
gal_chara_skill/core/: __init__.py  paths.py  result.py
gal_chara_skill/fs/: __init__.py  env.py  json.py  jsonl.py  log.py  models.py  path.py  text.py  yaml.py
galgame_character_skills/: __init__.py  app.py
resource/: .gitignore
services/: character_card_service.py  checkpoint_service.py  checkpoint_utils.py  compression_service.py  input_normalization.py  path_utils.py  skills_service.py  summarize_service.py  summary_api_service.py  summary_discovery.py  task_api_service.py
skills/: .gitignore
summaries/: .gitignore
tests/: conftest.py
tools/: dev.ts  install.ts
uploads/: .gitignore
utils/: file_processor.py  index.html  llm_interaction.py  r18_traits.json  tool_handler.py
(+166 files in other folders)
