[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "galgame-character-skills"
version = "0.1.0"
description = "LLM-based character summarize, skills, and card generation tool."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "requests==2.32.5",
  "litellm==1.83.4",
  "tiktoken==0.12.0",
  "Flask==3.0.3",
  "flask-cors==4.0.0",
  "pillow==12.0.0",
  "pytest==8.3.5",
]

[tool.setuptools.packages.find]
include = ["galgame_character_skills*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
