[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gal-chara-skill"
version = "0.1.0"
description = "A local long-text galgame character distillation tool."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "pjh456" }]
dependencies = ["numpydoc-decorator>=2.2.1", "pytest>=8.0.0", "pytest-cov>=5.0.0"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["gal_chara_skill*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--basetemp=tmp/pytest"
cache_dir = "tmp/pytest-cache"
